; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_fs_x.c_svn_fs_x__revision_prop.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_fs_x.c_svn_fs_x__revision_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_x__revision_prop(i32** %0, i32* %1, i32 %2, i8* %3, i32 %4, i32* %5, i32* %6) #0 {
  %8 = alloca i32**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  store i32** %0, i32*** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  store i32* %6, i32** %14, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = load i32, i32* @TRUE, align 4
  %18 = call i32 @svn_fs__check_fs(i32* %16, i32 %17)
  %19 = call i32 @SVN_ERR(i32 %18)
  %20 = load i32*, i32** %9, align 8
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* @FALSE, align 4
  %23 = load i32, i32* %12, align 4
  %24 = load i32*, i32** %14, align 8
  %25 = load i32*, i32** %14, align 8
  %26 = call i32 @svn_fs_x__get_revision_proplist(i32** %15, i32* %20, i32 %21, i32 %22, i32 %23, i32* %24, i32* %25)
  %27 = call i32 @SVN_ERR(i32 %26)
  %28 = load i32*, i32** %15, align 8
  %29 = load i8*, i8** %11, align 8
  %30 = call i32 @svn_hash_gets(i32* %28, i8* %29)
  %31 = load i32*, i32** %13, align 8
  %32 = call i32* @svn_string_dup(i32 %30, i32* %31)
  %33 = load i32**, i32*** %8, align 8
  store i32* %32, i32** %33, align 8
  %34 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %34
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_fs__check_fs(i32*, i32) #1

declare dso_local i32 @svn_fs_x__get_revision_proplist(i32**, i32*, i32, i32, i32, i32*, i32*) #1

declare dso_local i32* @svn_string_dup(i32, i32*) #1

declare dso_local i32 @svn_hash_gets(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
